# nmrsim

./: .flake8  .gitignore  .old_flake8  .pre-commit-config.yaml  BUGS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DEVELOPERS.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  api_planning.txt  environment_pc.yml  generate_datasets.ipynb  infrequent_operations.txt  old_tox.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  windnmr_defaults.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: documentation.md
.github/disabled_workflows/: build_linux.yml  build_mac.yml  build_win.yml  linting.yml  platform-smoke.yml  test_build_mac.yml  test_build_win.yml  test_make_sdist.yml  tox-platforms.yml  tox.yml
.github/workflows/: build_mac.yml  build_win.yml  codequality.yml  linting.yml  make_sdist.yml  platform-smoke.yml  push.yml  pypi.yml  test-docs.yml  test_pypi.yml  tox-cross-platform.yml  tox-platforms.yml  tox.yml
binder/: environment.yml  environment.yml.bak
cruft/: modules.rst
dev_notes/: README.txt  TODO.txt  api_planning.txt  bin_fixing.txt  bot.txt  documentation.txt  infrequent_operations.txt  meta.txt  optimization.txt  pre-pypi checklist  tox.txt  version_locations.txt  warnings.txt
dev_notes/conda/: README.md  environment_nmrsim_v0_5_1.yml
dev_notes/github_actions/: README.txt  python-publish.yml  pythonpackage.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  contributing.rst  developers.rst  index.rst  installation.rst  introduction.rst  nmrsim.rst
docs/source/jupyter/: 1-Introduction-to-API.ipynb  2-Interactive-Demo.ipynb  3-Low-Level-API.ipynb  4-Build-Tyrosine-Spectrum.ipynb  qm_explanation.ipynb
docs/source/jupyter_tobedeleted/: 3-Low-Level-API.ipynb  4-Build-Tyrosine-Spectrum.ipynb
history/: DNMRspeed.py  __init__.py  engine.py  hamiltonian_optimize.py  info.txt  nmoptimize.py  nmprint.py  nmrmath_old.py  simsignal_optimize.py  test_simsignal_optimize.py
jupyter/: 1-Introduction-to-API.ipynb  2-Interactive-Demo.ipynb  3-Low-Level-API.ipynb  4-Build-Tyrosine-Spectrum.ipynb  API-Introduction.ipynb  API.ipynb  Kuprov-Python.ipynb  LowLevelAPI.ipynb  __init__.py  interactive_demo.ipynb  pickletest.ipynb  qm_explanation.ipynb  sympy_hamiltonian.ipynb
jupyter/.ipynb_checkpoints/: Kuprov-Python-checkpoint.ipynb  qm_explanation-checkpoint.ipynb
jupyter/unimplemented/: tyrosine.ipynb
nmrsim/: __init__.py  _classes.py  _utils.py  discrete.py  dnmr.py  firstorder.py  importlib_r.py  math.py  plt.py  qm.py
nmrtools/: __init__.py  _classes.py  _descriptors.py  _utils.py  discrete.py  dnmr.py  firstorder.py  math.py  minimodel.py  nmrmath.py  nmrplot.py  partial.py  plt.py  qm.py
nmrtools/history/: ham2.py  transition_matrix_optimize.py
old_modules/: nmrmath.py  nmrplot.py
old_tests/: test_dnmrmath.py  test_dnmrplot.py  test_nmrmath.py  test_nmrplot.py  test_pickle.py  test_speed.py
src/nmrsim/: __init__.py  _classes.py  _descriptors.py  _utils.py  discrete.py  dnmr.py  firstorder.py  math.py  plt.py  qm.py
tests/: accepted_data.py  dnmr_standards.py  generate_datasets.ipynb  plottools.py  qm_arguments.py  references.py  simulation_data.py  sparse_testing_diary.md  test_dnmr.py  test_dnmrmath.py  test_dnmrplot.py  test_firstorder.py  test_importlib_resources.py  test_math.py  test_nmrmath.py  test_nmrplot.py  test_nmrsim.py  test_nmrtools.py  test_partial.py  test_pickle.py  test_plt.py  test_qm.py  test_sparse.py  test_speed.py  test_utils.py  testdata.py  windnmr_defaults.py
