[metadata]
name = nmrsim
version = 0.5.2
author = Geoffrey M. Sametz
author_email = "Geoffrey M. Sametz" <sametz@udel.edu>
description = A library for simulating nuclear magnetic resonance (NMR) spectra.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sametz/nmrsim
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Programming Language :: Python :: 3 :: Only
    Topic :: Education
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numpy
    sparse!=0.11, !=1.12
    importlib_resources ; python_version<"3.7"

[options.packages.find]
where = src

[options.extras_require]
dev = flake8
      ipykernel
      jupyter
      nbsphinx
      pytest
      pytest-cov
      pyfakefs
      sphinx
      sphinx_rtd_theme
      sphinxcontrib-napoleon
      bokeh
      tox
      tox-pyenv

######################
# Tool configuration #
######################

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers

[coverage:run]
source = nmrsim
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/nmrsim/
    */site-packages/nmrsim/

[tox:tox]
envlist = py38
isolated_build = True

[testenv]
deps =
    pyfakefs
    pytest
    pytest-cov
commands =
    pytest {posargs}
# When converting from tox.ini to setup.cfg, found that omitting
# the following setting caused pyfakefs tests in qm.py to fail when running
# tox from the command line (tests passed if run in PyCharm).
# usedevelop=True should = "pip install -e ."
usedevelop=True